tests/dfrouter/errors/false_net/errors.dfrouter
Error: The network file 'input/input_net.net.xml' is not accessible.
Quitting (on error).
